--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  provider: ^6.0.2
   firebase_auth: ^3.3.11
   cloud_firestore: ^3.1.11
   firebase_core: ^1.4.0
+  curved_navigation_bar: ^1.0.3
+  
   
 
 
