--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   cloud_firestore: ^3.1.11
   firebase_core: ^1.4.0
   curved_navigation_bar: ^1.0.3
+  intl: ^0.17.0
+  table_calendar: ^3.0.1
+  flutter_form_builder: ^7.1.1
   
   
 
