--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -66,4 +66,6 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "com.google.firebase:firebase-database:19.6.0"
+    implementation "com.squareup.picasso:picasso:2.71828"
 }
